--- a/app/views/sales-targets-categories.html
+++ b/app/views/sales-targets-categories.html
@@ -32,15 +32,35 @@
             </div>
           </div>
           <div class="col-xs-12 col-sm-4" ng-class="validation.calendarCssClassWithAdditionalChecks(salesTargetCategoryDataForm, salesTargetCategory.startDate, salesTargetCategory.endDate)">
-            <date-picker-field
-              form="salesTargetCategoryDataForm"
-              name="EffectiveStartDate"
-              label="Effective Start Date"
-              disable="isDisabled()"
-              required="true"
-              disable-past="true"
-              ng-model="salesTargetCategory.startDate">
-            </date-picker-field>
+            <div ng-if="!isDisabled()">
+              <date-picker-field
+                form="salesTargetCategoryDataForm"
+                name="EffectiveStartDate"
+                label="Effective Start Date"
+                disable="isDisabled()"
+                required="true"
+                disable-past="true"
+                ng-model="salesTargetCategory.startDate">
+              </date-picker-field>
+            </div>
+            <!-- Manually show normal input fields as for some reason calendar is not working on this page for past dates -->
+            <div ng-if="isDisabled()">
+              <fieldset ng-disabled="true">
+                <div class="form-group" >
+                  <label>Effective Start Date *</label>
+                  <p class="input-group">
+                    <span class="input-group-btn">
+                      <span class="btn btn-default disabled"><i class="glyphicon glyphicon-calendar"></i></span>
+                    </span>
+                    <input name="EffectiveStartDate"
+                           type="text"
+                           class="form-control"
+                           autocomplete="off"
+                           ng-model="salesTargetCategory.startDate" />
+                  </p>
+                </div>
+              </fieldset>
+            </div>
           </div>
           <div class="col-xs-12 col-sm-4" ng-class="validation.calendarCssClassWithAdditionalChecks(salesTargetCategoryDataForm, salesTargetCategory.startDate, salesTargetCategory.endDate)">
             <date-picker-field
