TS5PORTAL-711 | Create Stock Owner Item - Spl Char Fix

--- a/app/views/directives/input-price-type-stock-owner.html
+++ b/app/views/directives/input-price-type-stock-owner.html
@@ -55,7 +55,13 @@
 							* {{itemPrice.code}}
 						</div>
 
-						<input ng-disabled="!itemPrice.code || $parent.isDisabled()" name="Cost Price" ng-model="itemPrice.amount" type="text" class="form-control" ng-required="true" />
+						<input ng-disabled="!itemPrice.code || $parent.isDisabled()" 
+						       name="Cost Price" 
+						       ng-pattern="regexp.numberWithTwoDecimal" 
+						       ng-model="itemPrice.amount" 
+						       type="text" 
+						       class="form-control" 
+						       ng-required="true" />
 
 					</div>
 
