--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -149,6 +149,16 @@
                         ng-required="formData.discountTypeId === 2 && $parent.shouldValidatePrice()" />
                     </div>
                   </div>
+                  <div ng-class="validation.fieldCssClass(form, 'milesPoints')">
+                    <label class="control-label">Miles/Points</label>
+                    <input
+                      ng-model="formData.benefitMilesPoints"
+                      name="milesPoints"
+                      ng-disabled="$parent.isDisabled()"
+                      type="text" class="form-control"
+                      ng-pattern="regexp.positiveNumber"
+                      maxlength="10"/>
+                  </div>
                 </div>
               </div>
             </div>
