--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -149,11 +149,11 @@
                         ng-required="formData.discountTypeId === 2 && $parent.shouldValidatePrice()" />
                     </div>
                   </div>
-                  <div ng-class="validation.fieldCssClass(form, 'milesPoints')">
+                  <div ng-class="validation.fieldCssClass(form, 'benefitsMilesPoints')">
                     <label class="control-label">Miles/Points</label>
                     <input
-                      ng-model="formData.benefitMilesPoints"
-                      name="milesPoints"
+                      ng-model="formData.benefitsMilesPoints"
+                      name="benefitsMilesPoints"
                       ng-disabled="$parent.isDisabled()"
                       type="text" class="form-control"
                       ng-pattern="regexp.positiveNumber"
@@ -205,6 +205,16 @@
                     </div>
                     <input ng-model="formData.amountLimitPerShopValue[currency.id]" name="{{ currency.code }}AmountLimitPerShopValue" ng-disabled="$parent.isDisabled()" ng-required="formData.isAmountLimitPerShop" ng-pattern="regexp.price" type="text" class="form-control" />
                   </div>
+                </div>
+                <div ng-class="validation.fieldCssClass(form, 'limitPerShopMilesPoints')">
+                  <label class="control-label">Miles/Points</label>
+                  <input
+                    ng-model="formData.limitPerShopMilesPoints"
+                    name="limitPerShopMilesPoints"
+                    ng-disabled="$parent.isDisabled()"
+                    type="text" class="form-control"
+                    ng-pattern="regexp.positiveNumber"
+                    maxlength="10"/>
                 </div>
               </div>
             </div>
@@ -280,6 +290,16 @@
                     </div>
                     <input ng-model="formData.amountLimitPerTransactionValue[currency.id]" name="{{ currency.code }}AmountLimitPerTransactionValue" ng-required="formData.isAmountLimitPerTransaction" ng-disabled="$parent.isDisabled()" ng-pattern="regexp.price" type="text" class="form-control" />
                   </div>
+                </div>
+                <div ng-class="validation.fieldCssClass(form, 'limitPerTransactionMilesPoints')">
+                  <label class="control-label">Miles/Points</label>
+                  <input
+                    ng-model="formData.limitPerTransactionMilesPoints"
+                    name="limitPerTransactionMilesPoints"
+                    ng-disabled="$parent.isDisabled()"
+                    type="text" class="form-control"
+                    ng-pattern="regexp.positiveNumber"
+                    maxlength="10"/>
                 </div>
               </div>
             </div>
