TS5PORTAL-1183: sales target value 2 decimal places and 10 numbers before decimal point

--- a/app/views/sales-targets.html
+++ b/app/views/sales-targets.html
@@ -76,9 +76,9 @@
                 ng-disabled="isDisabled()"
                 type="text"
                 class="form-control"
-                maxlength="9"
+                maxlength="13"
                 placeholder="1.00"
-                ng-pattern="regexp.sixNumberWithTwoDecimal"
+                ng-pattern="regexp.tenNumberWithTwoDecimal"
                 id="salesTargetValue">
 
             </div>
