--- a/app/views/pre-order.html
+++ b/app/views/pre-order.html
@@ -2,7 +2,7 @@
   <div class="edit-controls">
     <div class="row">
       <div class="col-xs-6">
-        <h2 class="view-name">{{viewName}}: {{ preOrder.paxFirstName }} {{ preOrder.paxLastName }}</h2>
+        <h2 class="view-name">{{viewName}}: {{ preOrder.preOrderNumber }}</h2>
       </div>
 
       <div class="col-xs-6 text-right">
