--- a/app/views/employee-message-list.html
+++ b/app/views/employee-message-list.html
@@ -81,7 +81,7 @@
               <ui-select multiple ng-model="search.schedules" theme="bootstrap">
                 <ui-select-match placeholder="Select a Schedule...">{{ $item.scheduleNumber }}
                 </ui-select-match>
-                <ui-select-choices refresh-delay="300" repeat="schedule in schedulesList | filter: $select.search | limitTo: 50">
+                <ui-select-choices repeat="schedule in schedulesList | filter: $select.search">
                   {{ schedule.scheduleNumber }}
                 </ui-select-choices>
               </ui-select>
