Revert "TS5PORTAL-1000. Conflict fix. Updated branch with files from release"
This reverts commit fdd2dfb037dc9ce7f2dd4049211b8fab5dbbfb12.

--- a/app/views/directives/error-dialog.html
+++ b/app/views/directives/error-dialog.html
@@ -99,6 +99,7 @@
         <span ng-switch-when="214">Numeric value is expected, up to 6 digits.</span>
         <span ng-switch-when="215">Email required in correct format e.g. @,.com,etc.</span>
         <span ng-switch-when="303">Date range overlaps an existing record.</span>
+        <span ng-switch-when="216">Price Effective Date range not within Item Effective Date range.</span>
 
       </span>
 
