TS5PORTAL-845, TS5PORTAL-1427: charity transaction fixed Note message

--- a/app/views/reconciliation-discrepancy-detail.html
+++ b/app/views/reconciliation-discrepancy-detail.html
@@ -257,7 +257,7 @@
               </div>
 
               <h5 class="text-center"><b>Expected Charity</b></h5>
-              <table class="table table-condensed table-bordered col-xs-12">
+              <table class="table table-condensed table-bordered col-xs-12" style="margin-bottom: 5px;">
                 <tr class="active">
                   <td>Card Type</td>
                   <td>Currency</td>
@@ -280,6 +280,7 @@
                   <td>{{report.charityTotal ? report.charityTotal : '0.00'}}</td>
                 </tr>
               </table>
+              <p class="ng-binding" style="">Note: This is not included in Barset revenue</p>
             </div>
           </div>
         </div>
