TS5PORTAL-1437 - Fixed view field

--- a/app/views/promotion-category.html
+++ b/app/views/promotion-category.html
@@ -32,6 +32,7 @@
                id="newCategoryName"
                placeholder="Enter Category Name"
                maxlength="40"
+               ng-disabled="disableEditField"
                ng-pattern="regexp.alphanumericSpaces"
                required="promotionCategoryForm.$submitted"
         />
