--- a/app/views/store-instance-packing.html
+++ b/app/views/store-instance-packing.html
@@ -413,3 +413,20 @@
 </div>
 
 <delete-record-dialog></delete-record-dialog>
+
+<div class="modal" id="warning" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title"><span class='fa fa-exclamation-circle'></span> Warning - Items out of stock.</h3>
+      </div>
+      <div class="modal-body">
+        <h3>Attempting to dispatch more items than there are in stock.</h3>
+        <h4>Correct highlighted rows Picked Quantity or Save & Exit the store and update the LMP stock levels.</h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
