--- a/app/views/directives/input-price-type.html
+++ b/app/views/directives/input-price-type.html
@@ -138,11 +138,11 @@
 
     <div ng-show="itemPrice.startDate && itemPrice.endDate" class="station-exceptions">
 
-      <h3>Country Exceptions</h3>
+      <h3>Country Price Exception</h3>
 
       <p>
         <button type="button" ng-disabled="($parent.isAddPriceDisabled() || !$parent.isItemPriceNewOrIsExitingAndValidForEdit(itemPrice)) && !$parent.cloningItem" class="btn btn-primary" ng-click="addCountryException($parent.key)">
-          <i class="fa fa-plus"></i> Add Country Exception
+          <i class="fa fa-plus"></i> Add Country Price Exception
         </button>
       </p>
 
