--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -58,3 +58,19 @@
   </div>
 </div>
 
+<div class="modal" id="warning" data-backdrop="static" data-keyboard="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title"><span class='fa fa-exclamation-circle'></span> Warning - Configuration not selected.</h3>
+      </div>
+      <div class="modal-body">
+        <h3>Attempting to save configuration with unselected/empty value/s.</h3>
+        <h4>Select/enter configuration option/s and then click Save.</h4>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
