--- a/app/views/back-office-config.html
+++ b/app/views/back-office-config.html
@@ -65,8 +65,8 @@
         <h3 class="modal-title"><span class='fa fa-exclamation-circle'></span> Warning - Configuration not selected.</h3>
       </div>
       <div class="modal-body">
-        <h3>Attempting to save configuration with unselected/empty value/s.</h3>
-        <h4>Select/enter configuration option/s and then click Save.</h4>
+        <h3>Attempting to save configuration with unselected or empty value/s.</h3>
+        <h4>Select or enter missing option/s and then click Save.</h4>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
