TS5PORTAL-74 - Add check if field was populated

--- a/app/views/user-create.html
+++ b/app/views/user-create.html
@@ -51,7 +51,14 @@
             
             <div class="form-group" ng-class="{ 'has-error' : !formData.organization && displayError, 'has-success' : formData.organization}">
             <label>Organization *</label>
-            <ui-select name="organization" ng-model="formData.organization" theme="bootstrap" required ng-disabled="viewOnly">
+            <ui-select
+              name="organization"
+              ng-model="formData.organization"
+              theme="bootstrap"
+              required
+              ng-disabled="viewOnly"
+              ng-class="{ 'has-error' : !formData.organization && displayError , 'has-success' : formData.organization }"
+            >
               <ui-select-match placeholder="Start typing to find an organization">{{ $select.selected.name }}</ui-select-match>
               <ui-select-choices repeat="organization in organizations | filter: $select.search | orderBy:'name'">
                 <div ng-bind-html="organization.name | highlight: $select.search"></div>
