--- a/app/views/schedule-list.html
+++ b/app/views/schedule-list.html
@@ -161,8 +161,8 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearScheduleListId">Clear</button>
-          <button type="submit" class="btn btn-primary" id="searchScheduleListId">Search</button>
+          <button type="button" class="btn btn-default" ng-click="clearSearchForm()" id="clearScheduleListId" ng-disabled="searchInProgress">Clear</button>
+          <button type="submit" class="btn btn-primary" id="searchScheduleListId" ng-disabled="searchInProgress">Search</button>
         </div>
       </form>
     </div>
